homelab/templates/calibre-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - library.sethpyle.com
  rules:
    - host: library.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: calibre
                port:
                  number: 8083
